--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documents</title>
 </head>
-<body>
+<body background="https://i.postimg.cc/3x3QzSGq/blue-gradient-background.jpg">
 
     <script src="/script.js"  type="text/javascript"></script>
+    
 </body> 
 </html>
